# human_detection

./: CMakeLists.txt  README.md  license  package.xml
figures/: performance.avi
include/: KalmanFilter.h  associationMatrix.h  functions.h  functionsDiscretizedMap.h  rosnode.h
include/camera_detector/: associationWouter.h  associationsWouter.h  detection.h  detections.h  person.h  personAssociation.h  persons.h
launch/: human_intention_prediction.launch  human_intention_prediction_bagData.launch  human_walking_detection.launch  visualization.rviz
map/: map.yaml
msg/: hypothesis.msg  line.msg  singleTube.msg
src/: KalmanFilter.cpp  associationMatrix.cpp  functions.cpp  functionsDisretizedMap.cpp  main.cpp  rosnode.cpp  toTXT.cpp
tools/: HumanTeleop.py
