<?xml version="1.0"?>
<package>
  <name>human_intention_prediction</name>
  <version>0.1.0</version>
  <description>Map based hypotheses reasoning and validation about human intentions</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="g.bijlenga@student.tue.nl">Gosse</maintainer>
  <maintainer email="w.houtman@tue.nl">whoutman</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>armadillo_matrix</build_depend>
  <build_depend>hip_msgs</build_depend>
  <!-- <build_depend>turtlesim</build_depend> -->
  
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>armadillo_matrix</run_depend>
  <run_depend>hip_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
